Fixed bug: In high contrast mode, Color contrast ratio for CTRL+ALT+R is 4.4:1 which is less than 7:1

--- a/src/views/htmlcontent/src/css/color-theme-dark.css
+++ b/src/views/htmlcontent/src/css/color-theme-dark.css
@@ -103,5 +103,5 @@ slick-grid.active .grid .slick-cell.selected {
 }
 
 .shortCut {
-  color: grey;
+  color: rgb(255, 255, 255);
 }
